--- a/src/Frontend/PMP/TaskForm/TaskManagement.css
+++ b/src/Frontend/PMP/TaskForm/TaskManagement.css
@@ -1,62 +1,34 @@
 /* TaskManagement.css */
 
 .task-management-container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .task-management-header {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .task-management-button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .task-form-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .task-form-popup label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  .task-form-popup input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .task-form-popup button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .task-form-popup button.cancel-button {
-    background-color: #dc3545;
-    margin-left: 10px;
-  }
-  
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color:  #fdfeff;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(176, 200, 225, 0.1);
+}
+
+.task-management-header {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.heading-add-task {
+  color: rgb(96, 132, 248);
+}
+
+.add-task-button1 {
+  padding: 10px 20px; 
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px; /* Adjust font size */
+  transition: background-color 0.3s ease; /* Add transition effect */
+}
+
+.add-task-button:hover {
+  background-color: #0056b3; /* Change color on hover */
+}
